[package]
name = "backend"
version = "0.1.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Rocket web framework with JSON support
rocket = { version = "0.4.11", features = ["json"] }

# Synchronous DB connection pools for Rocket with Diesel and PostgreSQL
rocket_sync_db_pools = { version = "0.1.0-rc", features = ["diesel_postgres_pool"] }

# Serde for data serialization/deserialization with derive feature
serde = { version = "1.0", features = ["derive"] }

# Diesel ORM with PostgreSQL and chrono support
diesel = { version = "2.0", features = ["postgres", "chrono"] }

# CORS middleware for Rocket from the master branch
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }